--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,29 @@
     <string name="no_internet">Please check your internet connection!</string>
     <string name="turn_on_location">To continue using our services, you need to turn on your GPS and use High Accuracy Mode. Do you want to turn it on?</string>
 
+
+    <string name="drawer_open">Open</string>
+    <string name="drawer_close">Close</string>
+    <string-array name="nav_drawer_labels">
+        <item>@string/nav_item_home</item>
+        <item>@string/nav_item_view_plans</item>
+        <item>@string/nav_item_group</item>
+        <item>@string/nav_item_loan_history</item>
+        <item>@string/nav_item_search</item>
+        <item>@string/nav_item_profile</item>
+        <item>@string/nav_item_notifications</item>
+        <item>@string/nav_item_settings</item>
+        <item>@string/nav_item_logout</item>
+
+    </string-array>
+
+    <string name="nav_item_home">Dashboard</string>
+    <string name="nav_item_view_plans">View Loans</string>
+    <string name="nav_item_group">My Profile</string>
+    <string name="nav_item_loan_history">Loan History</string>
+    <string name="nav_item_search">Buy Points</string>
+    <string name="nav_item_profile">Refer a Friend</string>
+    <string name="nav_item_notifications">Customer Care</string>
+    <string name="nav_item_settings">Settings</string>
+    <string name="nav_item_logout">Logout</string>
 </resources>
