--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,8 @@
     <string name="nav_item_wallet">Wallet</string>
     <string name="nav_item_settings">Settings</string>
     <string name="nav_item_logout">Logout</string>
+
+    <!--Dashboard-->
+    <string name="credit_score">Credit Score:</string>
+
 </resources>
