--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,10 @@
     <string name="no_internet">Please check your internet connection!</string>
     <string name="turn_on_location">To continue using our services, you need to turn on your GPS and use High Accuracy Mode. Do you want to turn it on?</string>
 
+    <!--Login Status-->
+    <string name="login_success">Logged</string>
 
+    <!--Navigation-->
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
 
