--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,9 +33,7 @@
     <string name="server_issue">Please try after sometime!</string>
     <string name="no_internet">Please check your internet connection!</string>
     <string name="turn_on_location">To continue using our services, you need to turn on your GPS and use High Accuracy Mode. Do you want to turn it on?</string>
-
-    <!--Login Status-->
-    <string name="login_success">Logged</string>
+    <string name="init">INIT</string>
 
     <!--Navigation-->
     <string name="drawer_open">Open</string>
