--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="or">Or</string>
     <string name="submit">Submit</string>
     <string name="forgot_password">Forgot password</string>
+    <string name="change_password">Change password</string>
 
     <!--Registration Message-->
     <string name="see_you_quality">See if you qualify</string>
