--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="no_country">Country list is empty</string>
     <string name="phone_no">Mobile no</string>
     <string name="password">Password</string>
+    <string name="current_password">Current Password</string>
+    <string name="new_password">New Password</string>
+    <string name="confirm_new_password">Confirm New Password</string>
     <string name="email_address">Email Address</string>
     <string name="login">Login</string>
     <string name="register_now">Register now</string>
