--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="enter_new_password">Please enter the new password.</string>
     <string name="enter_confirm_password">Please enter the confirm password.</string>
     <string name="confirm_password_not_match">Confirm password do not match.</string>
+    <string name="new_old_password_different">New and old password should be different.</string>
     <string name="enter_password_rule">Password should follow mentioned rule.</string>
     <string name="required_email">Required valid email</string>
     <string name="poor_internet">Poor internet connection!</string>
