--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,20 @@
 <resources>
     <string name="app_name">L-Pesa</string>
     <string name="starter_loan">$ Starter Loan</string>
-    <string name="sign_in">Sign in</string>
-    <string name="sign_up">Sign up</string>
+    <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
     <string name="already_using_lpesa">Already using L-Pesa?</string>
-    <string name="get_started">Get started</string>
+    <string name="get_started">Get Started</string>
     <string name="micro_loan">Micro loan for mobile banking customer</string>
     <string name="dev_server_base_url">http://35.158.245.118/v2/</string>
     <string name="s3_bucket_url_profile_pic">https://s3.eu-central-1.amazonaws.com/s3.l-pesa.com/dev_server_imgs/</string>
     <string name="s3_bucket_url_id_proof_pic">https://s3.eu-central-1.amazonaws.com/s3.l-pesa.com/dev_server_id_imgs/</string>
-    <string name="no_more_data">No more data available to read</string>
-    <string name="no_country">Country list is empty</string>
-    <string name="phone_no">Mobile no</string>
+    <string name="no_more_data">No more data to read</string>
+    <string name="no_country">/No country was listed.</string>
+    <string name="phone_no">Mobile No.</string>
     <string name="email_address">Email Address</string>
     <string name="login">Login</string>
-    <string name="register_now">Register now</string>
+    <string name="register_now">Register Now</string>
     <string name="or">Or</string>
     <string name="submit">Submit</string>
     <string name="cancel">Cancel</string>
@@ -34,28 +34,28 @@
     <string name="confirm_new_pin">Confirm New Pin</string>
     <string name="password_should">Password should have</string>
     <string name="password_rule_one">Minimum 8 &amp; maximum 16 characters.</string>
-    <string name="password_rule_two">At least 1 numeric character.</string>
-    <string name="password_rule_three">At least 1 lowercase character.</string>
-    <string name="password_rule_four">At least 1 uppercase character.</string>
+    <string name="password_rule_two">At least 1 digit.</string>
+    <string name="password_rule_three">At least 1 lowercase letter.</string>
+    <string name="password_rule_four">At least 1 uppercase letter.</string>
     <string name="password_rule_five">At least 1 special character (like !@#$%*?).</string>
 
     <!--Caution Message-->
-    <string name="required_phone_email">Required valid phone number or email</string>
-    <string name="required_phone">Required valid phone number</string>
-    <string name="required_password">Required password</string>
+    <string name="required_phone_email">Enter valid phone no. or email.</string>
+    <string name="required_phone">Please enter valid phone number.</string>
+    <string name="required_password">Please enter the password.</string>
     <string name="enter_current_password">Please enter the current password.</string>
     <string name="enter_new_password">Please enter the new password.</string>
-    <string name="enter_confirm_password">Please enter the confirm password.</string>
-    <string name="confirm_password_not_match">Confirm password do not match.</string>
+    <string name="enter_confirm_password">Retype the new password to confirm.</string>
+    <string name="confirm_password_not_match">New passwords do not match.</string>
     <string name="new_old_password_different">New and old password should be different.</string>
     <string name="enter_password_rule">Password should follow mentioned rule.</string>
-    <string name="required_email">Required valid email</string>
+    <string name="required_email">Please enter valid email address.</string>
     <string name="poor_internet">Poor internet connection!</string>
     <string name="something_went_wrong">Something went wrong, please try after sometime!</string>
-    <string name="server_issue">Please try after sometime!</string>
+    <string name="server_issue">The server didn\'t respond, please try after sometime!</string>
+    <string name="password_change_success">Your password was changed.</string>
     <string name="no_internet">No Internet Connection</string>
-    <string name="password_change_success">Your password has been changed successfully!</string>
-    <string name="no_internet_details">You are not connected with internet, make sure Wi-Fi/Data is on, Airplane mode is off and try again.</string>
+    <string name="no_internet_details">You are not connected to internet, make sure Wi-Fi/Data is on, Airplane mode is off and try again.</string>
     <string name="turn_on_location">To continue using our services, you need to turn on your GPS and use High Accuracy Mode. Do you want to turn it on?</string>
     <string name="retry">Retry</string>
     <string name="init">INIT</string>
@@ -70,7 +70,7 @@
     <string name="nav_item_loan">Loan</string>
     <string name="nav_item_points">Buy Points</string>
     <string name="nav_item_investment">Investment</string>
-    <string name="nav_item_lpk">LPK(Kripton)</string>
+    <string name="nav_item_lpk">LPK (Kripton)</string>
     <string name="nav_item_wallet">Wallet</string>
     <string name="nav_item_settings">Settings</string>
     <string name="nav_item_logout">Logout</string>
@@ -81,7 +81,6 @@
         <item>Refer a Friend</item>
         <item>Notification</item>
         <item>Help &amp; Support</item>
-
     </string-array>
 
     <string-array name="settings_item_icon">
@@ -90,14 +89,9 @@
         <item>@drawable/ic_refer_friend</item>
         <item>@drawable/ic_notifications</item>
         <item>@drawable/ic_help</item>
-
     </string-array>
-
 
     <string name="credit_score">Credit Score:</string>
     <string name="change_pin">Change Pin</string>
-
-
-
 
 </resources>
