--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="phone_no">Mobile No.</string>
     <string name="email_address">Email Address</string>
     <string name="login">Login</string>
+    <string name="final_step">Final step</string>
     <string name="register_now">Register Now</string>
     <string name="or">Or</string>
     <string name="submit">Submit</string>
