--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -98,4 +98,13 @@
     <string name="credit_score">Credit Score:</string>
     <string name="change_pin">Change Pin</string>
 
+    <!--Profile Section-->
+    <string name="profile_information">Profile Information</string>
+    <string name="contact_no">+972544682519</string>
+    <string name="personal_info">Personal Information</string>
+
+
+
+
+
 </resources>
