--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,7 +104,9 @@
     <string name="personal_info">Personal Information</string>
 
 
+    <!--Dashboard-->
 
+    <string name="your_credit_score">Your L-Pesa Credit Score</string>
 
 
 </resources>
