--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,6 +112,8 @@
     <string name="current_loan">Current Loan</string>
     <string name="you_do_not_have_business_loan">You don\'t have any Business Loan</string>
     <string name="you_do_not_have_current_loan">You don\'t have any Current Loan</string>
+    <string name="cash_out_lpk">Cash Out LPK</string>
+    <string name="lets_do">Let\'s Do</string>
 
 
 </resources>
