--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,9 @@
     <string name="lets_do">Let\'s Do</string>
 
 
+    <!--Loan Plans-->
+    <string name="current_loan_plans">Current Loan Plans</string>
+    <string name="business_loan_plans">Business Loan Plans</string>
+
+
 </resources>
