--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -133,6 +133,7 @@
     <string name="you_do_not_have_current_loan">You don\'t have any Current Loan</string>
     <string name="cash_out_lpk">Cash Out LPK</string>
     <string name="lets_do">Let\'s Do</string>
+    <string name="history">History</string>
 
 
     <!--Loan Plans-->
