--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,7 +142,7 @@
     <string name="weeks">Weeks </string>
     <string name="days">Days </string>
     <string name="duration">Duration:</string>
-    <string name="interest_rate">Interest Rate/Day:</string>
+    <string name="interest_rate">Interest Rate:</string>
 
 
 
