--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -177,6 +177,8 @@
     <string name="processing_fee">Processing Fee(%)</string>
     <string name="current_credit_score">Current Credit Score:</string>
     <string name="actual_loan_amount">Actual Loan Amount</string>
+    <string name="total_payback">Total Payback:</string>
+    <string name="pay_full_amount">Pay Full Amount</string>
 
 
     <!--LPK Withdrawal-->
