--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -262,5 +262,9 @@
     <!--Loan-->
     <string name="loan_plan_details">Loan Plan Details</string>
     <string name="description_of_loan_purpose">Description of Loan Purpose</string>
+    <string name="choose_loan_purpose_description">Choose loan purpose description</string>
+    <string name="choose_description">Choose Description</string>
+    <string name="loan_purpose_description">Enter your loan purpose description:</string>
+    <string name="max_500_words">Max 500 words</string>
 
 </resources>
