--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -266,6 +266,7 @@
     <string name="choose_description">Choose Description</string>
     <string name="loan_purpose_description">Enter your loan purpose description:</string>
     <string name="enter_purpose">Enter purpose</string>
+    <string name="required_loan_purpose">Required loan purpose</string>
     <string name="max_500_words">Max 500 words</string>
 
 </resources>
