--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -268,5 +268,8 @@
     <string name="enter_purpose">Enter purpose</string>
     <string name="required_loan_purpose">Required loan purpose</string>
     <string name="max_500_words">Max 500 words</string>
+    <string name="ref_no">Ref. No:</string>
+    <string name="maturity_amount">Maturity Amount</string>
+    <string name="maturity_on">Maturity On</string>
 
 </resources>
