--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -280,6 +280,7 @@
     <string name="profile_image">Profile Image*</string>
     <string name="required_profile_image">Required profile image</string>
     <string name="personal_id_type">Personal ID Type*</string>
+    <string name="business_type">Business ID Type*</string>
     <string name="edit_id_number">ID Number*</string>
     <string name="view_file">View File</string>
     <string name="delete">Delete</string>
